--- a/Список курлов.md
+++ b/Список курлов.md
@@ -52,13 +52,13 @@ curl --location 'http://localhost:8080/api/v1/books/1' \
 --data ''
 ```
 
-PUT - обновить по id - TODOOO!
+PUT - обновить по id
 
 ```
-curl --location 'http://localhost:8080/api/v1/books' \
+curl --location --request PUT 'http://localhost:8080/api/v1/books/1' \
 --header 'Content-Type: application/json' \
 --data '{
-"id": 20,
+"id": 1,
 "name": "Преступление и наказание",
 "year": "2023-08-04",
 "authors": [
@@ -72,10 +72,10 @@ curl --location 'http://localhost:8080/api/v1/books' \
 
 ```
 
-POST - добавить TODOOO!
+POST - добавить
 
 ```
-curl --location --request PUT 'http://localhost:8080/api/v1/books/20' \
+curl --location 'http://localhost:8080/api/v1/books' \
 --header 'Content-Type: application/json' \
 --data '{
 "name": "Преступление и наказание",
