--- a/Список курлов.md
+++ b/Список курлов.md
@@ -98,7 +98,7 @@ curl --location --request DELETE 'http://localhost:8080/api/v1/books/20' \
 --data ''
 ```
 
-GET - получить список - TODOOO жанры авторы удалить в дто
+GET - получить список
 
 ```
 curl --location 'http://localhost:8080/api/v1/books?page=0&size=100&genreId=8&authorId=1' \
@@ -133,7 +133,7 @@ curl --location --request PUT 'http://localhost:8080/api/v1/authors/1' \
 }'
 ```
 
-DELETE - удалить по id - TODOOOOOOOOOOOOOOOOOO
+DELETE - удалить по id 
 
 ```
 curl --location --request DELETE 'http://localhost:8080/api/v1/authors/1' \
